feat: main, menu, playlist

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
         <div id="root"></div>
         <!-- Vite는 자동으로 main.tsx에서 앱을 시작합니다. 이 줄은 필요하지 않습니다. -->
         <script type="module" src="/src/main.tsx"></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+        />
     </body>
 </html>
